[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["macros", "sync", "rt-multi-thread"] }
warp = "0.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3" }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
log = "0.4.17"
env_logger = "0.10.0"
redis = "0.21.5"
