[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
web-sys = "0.3.60"
reqwest = "0.11.13"
syntect = {  version = "5.0", default-features = false, features = ["default-fancy"] }
wasm-bindgen = "0.2.83"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
