[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-websocket = "0.1.1"
web-sys = "0.3.60"
reqwest = "0.11.13"
syntect = {  version = "5.0", default-features = false, features = ["default-fancy"] }
wasm-bindgen = "0.2.83"
serde_json = "1.0.68"
serde = { version = "1.0.130", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
yew-router = "0.16"
uuid = { version = "1.2.2", features = ["serde", "v4", "js"] }
gloo-timers = "0.2.6"